--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,13 @@
-# Compiled class file
-*.class
+# Buck
+.buckconfig.local
+.buckd
+.buckjavaargs.local
+.okbuck
+buck-out
+build-ij
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Intellij
+*.iml
+*.idea/*
+!.idea/checkstyle-idea.xml
+local.properties
