--- a/.buckconfig
+++ b/.buckconfig
@@ -8,3 +8,18 @@
   jdk_name = 1.8
   jdk_type = JavaSDK
   project_compiler_output_url = build/ij/classesa
+
+[project]
+  ide = intellij
+  temp_files = ^#.*#$, .*~$, .*\.swp$
+  parallel_parsing = true
+  build_file_search_method = watchman
+  intellij_aggregation_mode = none
+  remove_unused_libraries = true
+  skip_build = true
+
+  ignore = \
+    **/build, \
+
+  watchman_cursor = clock_id
+  glob_handler = watchman
